--- a/Frontend/Dockerfile
+++ b/Frontend/Dockerfile
@@ -1,2 +1,7 @@
 FROM nginx:alpine
-COPY . /usr/share/nginx/html/
+COPY . /usr/share/nginx/html
+# EXPOSE 5501
+
+# FROM nginx:alpine
+# COPY . /usr/share/nginx/html/
+# COPY ./nginx.conf ./conf.d/default.conf
