--- a/Backend/.env
+++ b/Backend/.env
@@ -1,5 +1,6 @@
 
-DATBASE_CONNECTION_URL= ("mongodb+srv://deepak:demo@123@deepakscmxpert.izxfnet.mongodb.net/?retryWrites=true&w=majority") 
-
+dbUri= "mongodb+srv://{}:{}@scmxpert.73z8rrw.mongodb.net/?retryWrites=true&w=majority"
+dbUsername= 'deepak'
+dbPassword='demo@123'
 # //hODPnQz4tWpV9M3B
 
